<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mailapp.LogScreenActivity"
    android:padding="14dp">

    <TextView
        android:text="@string/email_text_view"
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/Heading"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text_view"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:text="@string/password_text_view"
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        style="@style/Heading"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_view"/>

    <Spinner
        android:id="@+id/host_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit_text"/>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Heading"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
